--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,39 +1,53 @@
-cmake_minimum_required(VERSION 2.8)
-project(Libcbdetect)
+project(cbdetect)
 
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin/${CMAKE_BUILD_TYPE})
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})
-set(CMAKE_LIBRARY_PATH ${PROJECT_SOURCE_DIR}/lib/${CMAKE_BUILD_TYPE})
+add_library(${PROJECT_NAME}
+  src/board_energy.cpp
+  src/board_energy.h
+  src/boards_from_corners.cpp
+  src/boards_from_corners.h
+  src/config.h
+  src/create_correlation_patch.cpp
+  src/create_correlation_patch.h
+  src/filter_board.cpp
+  src/filter_board.h
+  src/filter_corners.cpp
+  src/filter_corners.h
+  src/find_corners.cpp
+  src/find_corners.h
+  src/find_modes_meanshift.cpp
+  src/find_modes_meanshift.h
+  src/get_image_patch.cpp
+  src/get_image_patch.h
+  src/get_init_location.cpp
+  src/get_init_location.h
+  src/grow_board.cpp
+  src/grow_board.h
+  src/image_normalization_and_gradients.cpp
+  src/image_normalization_and_gradients.h
+  src/init_board.cpp
+  src/init_board.h
+  src/non_maximum_suppression.cpp
+  src/non_maximum_suppression.h
+  src/polynomial_fit.cpp
+  src/polynomial_fit.h
+  src/refine_corners.cpp
+  src/refine_corners.h
+  src/score_corners.cpp
+  src/score_corners.h
+  src/weight_mask.cpp
+  src/weight_mask.h
+)
 
-if (UNIX)
-  set(CMAKE_CXX_COMPILER g++)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -fopenmp")
-  add_definitions(-DUNIX)
-elseif (WIN32)
-  add_definitions(-DWINDOWS)
-  if (MSVC)
-    set(CMAKE_CXX_STANDARD 14)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -openmp")
-    add_definitions("/EHsc")
-  endif ()
-endif ()
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+    ${PROJECT_SOURCE_DIR}
+    ../
+)
 
-option(SHARED_LIB "Request build of shared libraries." ON)
-if (SHARED_LIB)
-  if (WIN32)
-    add_definitions("-DIS_A_DLL")
-  endif ()
-  set(LIB_TYPE SHARED)
-else ()
-  set(LIB_TYPE STATIC)
-endif ()
+target_link_libraries(${PROJECT_NAME}
+	opencv_core
+	opencv_calib3d
+	opencv_imgproc
+)
 
-find_package(OpenCV REQUIRED)
-
-set(THIRD_PARTY_INCLUDE_DIRS ${OpenCV_INCLUDE_DIRS})
-set(THIRD_PARTY_LIBS ${OpenCV_LIBS})
-include_directories(${THIRD_PARTY_INCLUDE_DIRS}
-    ${PROJECT_SOURCE_DIR}/include)
-
-add_subdirectory(${PROJECT_SOURCE_DIR}/src)
-add_subdirectory(${PROJECT_SOURCE_DIR}/src/libcbdetect)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic -Wunused)
