--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,4 +50,4 @@ target_link_libraries(${PROJECT_NAME}
 	opencv_imgproc
 )
 
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic -Wunused)
+#target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic -Wunused)
